--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description":  content="Estudo, dedicação e esforço são palavras que me definem. Criar um site foi uma das melhores formas de divulgar meus projetos e meus serviços.">
+    <meta name="description" content="Estudo, dedicação e esforço são palavras que me definem. Criar um site foi uma das melhores formas de divulgar meus projetos e meus serviços.">
     <meta name="keywords" content="Portfolio pessoal, exibições de projetos, marca, publicidade, designer gráfico, web designer, social media, SEO, artes gráficas, landing page.">
     <meta name="author" content="Eduardo Victor">
 
@@ -186,9 +186,9 @@
               <i class="fa fa-line-chart"></i>
             </span>
             <h4>
-              <strong>Social Media e SEO</strong>
+              <strong>Social Media</strong>
             </h4>
-            <p class="text-faded mb-0">Expanda seus serviços atravéis das redes sociais e aumente seus acessos nos campos de busca do GOOGLE.</p>
+            <p class="text-faded mb-0">Expandindo seus serviços atraveis das redes sociais.</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
