--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-
-
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -179,7 +177,7 @@
             <h4>
               <strong>Logotipo</strong>
             </h4>
-            <p class="text-faded mb-0">Criamos sua marca e cuidamos de toda a indetidade visual.</p>
+            <p class="text-faded mb-0">Criamos sua marca e cuidamos de toda a identidade visual.</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
